# session

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: Cargo.toml  Dioxus.toml  input.css  package-lock.json
apps/desktop/assets/: tailwind.css
apps/desktop/src/: gateway.rs  main.rs  services.rs
apps/session-cli/: Cargo.toml
apps/session-cli/src/: lib.rs  main.rs
apps/web/: Cargo.toml  Dioxus.toml
apps/web/assets/: tailwind.css
apps/web/src/: connection.rs  main.rs  web_client_handler.rs
crates/session/: Cargo.toml  readme.md
crates/session-extension/: Cargo.toml
crates/session-extension/src/: main.rs
crates/session-proto/: Cargo.toml
crates/session-proto/src/: lib.rs  offset_map.rs  routing_project.rs  ruler_lanes.rs  services.rs  setlist.rs  song.rs  track_structure.rs
crates/session-ui/: Cargo.toml
crates/session-ui/src/: event_bridge.rs  lib.rs  panel_registration.rs  shell.rs  signals.rs
crates/session-ui/src/components/: loop_indicator.rs  mod.rs  progress.rs  section_progress.rs  sidebar_items.rs  song.rs  time_signature_marker.rs  transport_controls.rs
crates/session-ui/src/layouts/: mod.rs  performance.rs  top_bar.rs
crates/session/src/: cache.rs  daw_module.rs  event_bus.rs  lib.rs  main.rs  routing_project.rs  setlist_builder.rs  setlist_service.rs  song_builder.rs  song_service.rs
crates/session/src/setlist_service/: build.rs  combined.rs  demo.rs  file_watcher.rs  hydration.rs  live_daw_sync.rs  live_sync.rs  mod.rs  navigation.rs  playback.rs  polling.rs  position_sync.rs
crates/session/tests/: demo_setlist_tests.rs  edge_case_tests.rs  integration_tests.rs  loop_tests.rs  marker_region_tests.rs  navigation_tests.rs  project_tests.rs  reaper_session_extension.rs  song_builder_tests.rs  subscription_tests.rs  tempo_tests.rs  transport_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
