[workspace]
members = [
    "apps/cli",
    "apps/desktop",
    "apps/web",
    "crates/session",
    "crates/session-extension",
    "crates/session-proto",
    "crates/session-ui",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# ── Session crates (facade pattern) ──────────────────────────────────
# `session` is the facade — the only public API surface for the session domain.
# `session-proto` is INTERNAL. App crates must NOT depend on it directly;
# use the `session` facade instead. session-ui is an exception (Dioxus components).
session = { path = "crates/session" }
session-proto = { path = "crates/session-proto" }
session-ui = { path = "crates/session-ui", default-features = false }

# ── DAW domain (sibling repo — facade crate) ────────────────────────
# NOTE: daw-proto, daw-control, daw-control-sync, daw-reaper, daw-standalone,
# dawfile-reaper are INTERNAL. Access them through the `daw` facade crate.
# Use features: sync, reaper, standalone, file
daw = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-extension-runtime = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }

# ── Testing (from daw repo) ─────────────────────────────────────────
reaper-test = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }

# ── Vox service framework (fork with wasm32 fix) ─────────────────────
vox = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-stream = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-websocket = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }

# ── Facet reflection ────────────────────────────────────────────────
facet = { version = "0.44" }

# ── Keyflow (sibling repo — facade pattern) ─────────────────────────
keyflow = { git = "https://github.com/FastTrackStudios/keyflow.git", branch = "main" }

# ── Actions / Input (sibling repo) ──────────────────────────────────
actions-proto = { git = "https://github.com/FastTrackStudios/input_actions.git", branch = "main" }

# ── Dock UI (sibling repo) ──────────────────────────────────────────
dock-dioxus = { git = "https://github.com/FastTrackStudios/dock-dioxus.git", branch = "main", default-features = false }
dock-proto = { git = "https://github.com/FastTrackStudios/dock-dioxus.git", branch = "main" }

# ── FTS design system ───────────────────────────────────────────────
fts-ui = { git = "https://github.com/FastTrackStudios/fts-ui.git", branch = "main" }

# ── Shared infrastructure ───────────────────────────────────────────
utils = { git = "https://github.com/FastTrackStudios/fts-utils.git", branch = "main" }

# ── Instrumentation ─────────────────────────────────────────────────
moire = { version = "1.0", features = ["diagnostics"] }

# ── UI framework ─────────────────────────────────────────────────────
dioxus = "0.7.2"

# ── Async runtime ───────────────────────────────────────────────────
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# ── Serialization ───────────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# ── Observability ───────────────────────────────────────────────────
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Utilities ────────────────────────────────────────────────────────
eyre = "0.6"

# ── Local development overrides ─────────────────────────────────────
# Uncomment the sections below to use local checkouts instead of GitHub.
# This gives you instant rebuilds when iterating across repos.
#
[patch."https://github.com/FastTrackStudios/daw.git"]
daw = { path = "../daw/crates/daw" }
daw-extension-runtime = { path = "../daw/crates/daw-extension-runtime" }
reaper-test = { path = "../daw/crates/reaper-test" }
#
# [patch."https://github.com/FastTrackStudios/keyflow.git"]
# keyflow = { path = "../keyflow/crates/keyflow" }
#
# [patch."https://github.com/FastTrackStudios/input_actions.git"]
# actions-proto = { path = "../input_actions/crates/actions-proto" }
#
# [patch."https://github.com/FastTrackStudios/dock-dioxus.git"]
# dock-dioxus = { path = "../dock-dioxus/crates/dock-dioxus" }
# dock-proto = { path = "../dock-dioxus/crates/dock-proto" }
#
# [patch."https://github.com/FastTrackStudios/fts-ui.git"]
# fts-ui = { path = "../fts-ui/crates/fts-ui" }
#
# [patch."https://github.com/FastTrackStudios/fts-utils.git"]
# utils = { path = "../fts-utils" }
#
# Redirect transitive deps on upstream vox to our fork (wasm32 fix)
[patch."https://github.com/bearcove/vox.git"]
vox = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-core = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-types = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-postcard = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-stream = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-websocket = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-shm = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-schema = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-service-macros = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-codegen = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-inprocess = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
shm-primitives = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }

# ── Vendored patches ──────────────────────────────────────────────────
# moire: unify crates.io moire with the git rev that vox pulls in,
# avoiding duplicate moire-runtime #[ctor] registrations that crash.
# moire-trace-capture: tolerate broken frame-pointer chains (NixOS glibc).
[patch."https://github.com/bearcove/moire"]
moire-trace-capture = { path = "../forks/moire-trace-capture" }

[patch.crates-io]
moire = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-macros-noop = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-runtime = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-tokio = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-trace-types = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-types = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-wasm = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-wire = { git = "https://github.com/bearcove/moire", rev = "13eac79" }

[workspace.lints.rust]
dead_code = "allow"
unused = "allow"

[workspace.lints.clippy]
