[package]
name = "session-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "session-desktop"
path = "src/main.rs"

[dependencies]
daw = { workspace = true, features = ["sync"] }
session.workspace = true
session-ui = { workspace = true, default-features = false, features = ["desktop"] }
dioxus = { workspace = true, features = ["desktop"] }
fts-ui.workspace = true
dock-dioxus = { workspace = true, default-features = false, features = ["web"] }
dock-proto.workspace = true
vox.workspace = true
vox-stream.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
moire.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
