[package]
name = "session-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "session_cli"
path = "src/lib.rs"

[[bin]]
name = "session"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
