[package]
name = "session-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
vox.workspace = true
actions-proto.workspace = true
facet.workspace = true
daw.workspace = true
keyflow.workspace = true
utils.workspace = true
uuid = { version = "1", features = ["v4", "v7", "serde", "js"] }
serde.workspace = true
eyre.workspace = true
thiserror.workspace = true
tracing = "0.1"
futures = "0.3"

# Non-WASM dependencies (tokio for async runtime)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

# WASM-specific dependencies for timers
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.3"
