[package]
name = "session"
version = "0.1.0"
edition = "2024"

[lib]
name = "session"
path = "src/lib.rs"

[[bin]]
name = "session"
path = "src/main.rs"

[dependencies]
session-proto = { path = "../session-proto" }
actions-proto.workspace = true
daw = { workspace = true, features = ["file"] }
vox.workspace = true
tokio = { version = "1.48", features = ["rt", "sync", "time", "macros"] }
moire.workspace = true
eyre.workspace = true
tracing.workspace = true
chrono = "0.4"
utils.workspace = true
uuid = { version = "1", features = ["v4"] }
rayon = "1"
keyflow = { workspace = true, features = ["text"] }
smallvec = "1.13"
rustc-hash = "2"

[dev-dependencies]
daw = { workspace = true, features = ["standalone", "file"] }
reaper-test.workspace = true
eyre.workspace = true
